--- a/merkle-tree/Cargo.toml
+++ b/merkle-tree/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sha256="1.4.0"
-uint = "0.9.0"
-sha2 = "0.10.0"
-digest = "0.10.0"
+sha256={version="1.4.0", default-features=false}
+uint = {version="0.9.0", default-features=false}
+sha2 = {version="0.10.0", default-features=false}
+digest = {version="0.10.0", default-features=false}
